[gd_scene load_steps=7 format=3 uid="uid://di1dek1yf6ysn"]

[ext_resource type="Script" uid="uid://bo3tt7dw2014w" path="res://Utility/menu_APRIL_2025.gd" id="1_ip7xm"]
[ext_resource type="Script" uid="uid://cogv3ftpgptnm" path="res://battle.gd" id="1_oxp8w"]
[ext_resource type="Script" uid="uid://4k3dlhunalfd" path="res://event_queue.gd" id="2_6t8i5"]
[ext_resource type="PackedScene" uid="uid://bw3ftyjiaapxm" path="res://player_windows.tscn" id="3_i431l"]
[ext_resource type="PackedScene" uid="uid://xfrm3l7k73b0" path="res://enemy.tscn" id="4_6t8i5"]
[ext_resource type="Resource" uid="uid://bljkqcwlrvsb5" path="res://Enemies/mister_moustache.tres" id="6_dw4jg"]

[node name="Battle" type="Control"]
layout_mode = 3
anchor_right = 0.934
anchor_bottom = 0.878
offset_right = 0.119995
offset_bottom = 0.039978
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oxp8w")

[node name="EventQueue" type="Node" parent="."]
script = ExtResource("2_6t8i5")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.07
anchor_bottom = 1.128
offset_right = 0.0699768
offset_bottom = 5.03198
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.067
anchor_bottom = 1.142
offset_right = -0.03302
offset_bottom = 0.0979919
grow_horizontal = 2
grow_vertical = 2

[node name="Options" type="PanelContainer" parent="MarginContainer" node_paths=PackedStringArray("buttons_container")]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_ip7xm")
buttons_container = NodePath("VBoxContainer")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Options"]
layout_mode = 2

[node name="Button" type="Button" parent="MarginContainer/Options/VBoxContainer"]
layout_mode = 2
text = "Fight"

[node name="Button2" type="Button" parent="MarginContainer/Options/VBoxContainer"]
layout_mode = 2
text = "Defense"

[node name="PlayerWindows" parent="MarginContainer" instance=ExtResource("3_i431l")]
layout_mode = 2

[node name="Enemies" type="HBoxContainer" parent="." node_paths=PackedStringArray("buttons_container")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.5
offset_top = -30.5
offset_right = -40.5
offset_bottom = 1.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
script = ExtResource("1_ip7xm")
buttons_container = NodePath(".")

[node name="Enemy" parent="Enemies" instance=ExtResource("4_6t8i5")]
layout_mode = 2
data = ExtResource("6_dw4jg")

[node name="Enemy2" parent="Enemies" instance=ExtResource("4_6t8i5")]
layout_mode = 2
data = ExtResource("6_dw4jg")

[node name="Enemy3" parent="Enemies" instance=ExtResource("4_6t8i5")]
layout_mode = 2
data = ExtResource("6_dw4jg")

[connection signal="button_pressed" from="MarginContainer/Options" to="." method="_on_options_button_pressed"]
[connection signal="button_pressed" from="Enemies" to="." method="_on_enemies_button_pressed"]
